# TeleGramJokeBot

./: main.py  pyproject.toml
jokes_engine/: joke_fetcher.py
