[tool.poetry]
name = "repl_python3_beta_WTFIsThis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
yfinance = "^0.1.59"
jokeapi = "^0.2.11"
pyTelegramBotAPI = "^3.7.9"
flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
